--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,50 @@
-<%- include global/head.ejs %>
+<!DOCTYPE html>
+<html class="no-js">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Cambridge University Library Search</title>
+    <meta name="description" content="Cambridge University Library Search">
+    <meta name="viewport" content="width=device-width">
 
-    <section>
-        <div class="jumbotron">
-            <div class="container" id="search">
-                <h1>LibrarySearch</h1>
-                <form role="form" id="frmSearch">
-                  <div class="form-group">
-                    <label for="txtQuery"></label>
-                    <input type="text" class="form-control" id="txtQuery" placeholder="Enter query">
-                  </div>
-                  <button type="submit" data-loading-text="Fetching results..." class="btn btn-primary btn-lg">Submit</button>
-                </form>
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    <style>
+        body {
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
+    </style>
+    <link rel="stylesheet" href="/stylesheets/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
+</head>
+<body>
+    <header>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <p class="navbar-text pull-left"><a href="/" title="Cambridge University Library Search">Cambridge University Library Search</a></p>
             </div>
-            <hr>
         </div>
-    </section>
+    </header>
 
-<%- include global/foot.ejs %>
+    <section id="content"><%- body %></section>
+
+    <footer>
+        <div class="navbar navbar-inverse navbar-fixed-bottom">
+            <div class="navbar-inner">
+                <div class="container">
+                    <p class="navbar-text pull-right">&copy; Cambridge University Library 2013</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- DEPENDENCIES -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+    <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="/js/vendor/bootstrap.min.js"></script>
+
+    <!-- PAGE JAVASCRIPT-->
+    <script src="/js/main.js"></script>
+</body>
+</html>
