--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,5 +1,7 @@
 <div class="jumbotron">
     <div class="container" id="search">
+
+        <!-- Search -->
         <div class="row">
             <div class="col-md-12">
                 <h1>LibrarySearch</h1>
@@ -10,8 +12,7 @@
                   </div>
                   <button type="submit" data-loading-text="Fetching results..." class="btn btn-primary btn-lg">Submit</button>
                 </form>
-            </div>
+            </div> 
         </div>
     </div>
-    <hr>
 </div>
