Added advanced search for Aquabrowser

--- a/lib/views/partials/results.ejs
+++ b/lib/views/partials/results.ejs
@@ -1,14 +1,29 @@
 <div class="jumbotron">
     <div class="container">
-        <form role="form" id="frmSearch">
-            <div class="form-group">
-                <label class="sr-only" for="txtQuery"></label>
-                <input type="text" class="form-control" id="txtQuery" placeholder="Enter query" value="<%= query %>">
-            </div>
-            <button type="submit" data-loading-text="Fetching results..." class="btn btn-primary btn-lg">Submit</button>
-        </form>
+        <!-- Form -->
+        <%- form %>
     </div>
 </div>
+
+<!--
+<div class="container">
+    <ul class="nav nav-tabs">
+        <li><a href="#books" data-toggle="tab">Books</a></li>
+        <li><a href="#ebooks" data-toggle="tab">Ebooks</a></li>
+        <li><a href="#journals" data-toggle="tab">Journals</a></li>
+        <li><a href="#manuscripts" data-toggle="tab">Manuscripts</a></li>
+        <li><a href="#papers" data-toggle="tab">Papers</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="books">...</div>
+        <div class="tab-pane" id="ebooks">...</div>
+        <div class="tab-pane" id="journals">...</div>
+        <div class="tab-pane" id="manuscripts">...</div>
+        <div class="tab-pane" id="papers">...</div>
+    </div>    
+</div>
+<br/>
+-->
 
 <div class="container">
     <% if (query) { %>
