--- a/lib/views/index.ejs
+++ b/lib/views/index.ejs
@@ -7,14 +7,14 @@
     <meta name="description" content="Cambridge University Library Search">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/vendor/bootstrap.min.css">
     <style>
         body {
             padding-top: 50px;
             padding-bottom: 20px;
         }
     </style>
-    <link rel="stylesheet" href="/stylesheets/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/stylesheets/vendor/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
@@ -46,11 +46,12 @@
                 <div class="modal-body">
                     <div class="progress progress-striped active">
                         <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+                        <p>loading...</p>
                     </div>
                 </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+            </div>
+        </div>
+    </div>
 
     <!-- DEPENDENCIES -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
