--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,22 +1,22 @@
+#frmSearch .dropdown-toggle, #frmSearch .dropdown-menu li a{
+    text-transform: capitalize;
+}
 
+#frmSearch #dpd-numrecords button{
+    border-radius: 0;
+    border-left: 0;
+    border-right: 0;
+}
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
+#frmSearch #dpd-numrecords .dropdown-toggle{
+    min-width: 70px;
+}
 
+#frmSearch #dpd-type .dropdown-toggle{
+    min-width: 120px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* Bootstrap fix */
+.modal-open, .modal-open .navbar-fixed-top {
+  margin-right: 0 !important;
+}
