--- a/lib/views/partials/form.ejs
+++ b/lib/views/partials/form.ejs
@@ -3,7 +3,9 @@
         <div class="input-group">
             <div class="input-group-btn" id="dpd-type">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                    <span class="pull-right"><span class="type">All</span> <span class="caret"></span></span>
+                    <span class="pull-right">
+                        <span class="type"><% if (params.type) { %><%= params.type %><% } else { %>All<% } %></span> <span class="caret"></span>
+                    </span>
                 </button>
                 <ul class="dropdown-menu">
                     <li data-name="all"><a href="#">All</a></li>
@@ -15,7 +17,7 @@
             </div>
             <div class="input-group-btn" id="dpd-numrecords">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                    <span class="pull-right"><span class="numrecords">10</span> <span class="caret"></span></span>
+                    <span class="pull-right"><span class="numrecords"><%= params.records %></span> <span class="caret"></span></span>
                 </button>
                 <ul class="dropdown-menu">
                     <li data-name="10" title="10"><a href="#">10</a></li>
