--- a/lib/views/partials/results.ejs
+++ b/lib/views/partials/results.ejs
@@ -1,115 +1,233 @@
 <div class="jumbotron">
     <div class="container">
-        <!-- Form -->
-        <%- form %>
+        <!-- Search -->
+        <div class="row">
+            <div class="col-md-12">
+                <h2>Search results for <%= query %></h2>
+                <%- form %>
+            </div> 
+        </div>
     </div>
 </div>
 
-<!--
 <div class="container">
-    <ul class="nav nav-tabs">
-        <li><a href="#books" data-toggle="tab">Books</a></li>
-        <li><a href="#ebooks" data-toggle="tab">Ebooks</a></li>
-        <li><a href="#journals" data-toggle="tab">Journals</a></li>
-        <li><a href="#manuscripts" data-toggle="tab">Manuscripts</a></li>
-        <li><a href="#papers" data-toggle="tab">Papers</a></li>
-    </ul>
-    <div class="tab-content">
-        <div class="tab-pane active" id="books">...</div>
-        <div class="tab-pane" id="ebooks">...</div>
-        <div class="tab-pane" id="journals">...</div>
-        <div class="tab-pane" id="manuscripts">...</div>
-        <div class="tab-pane" id="papers">...</div>
-    </div>    
-</div>
-<br/>
--->
 
-<div class="container">
+    <!-- Valid query -->
     <% if (query) { %>
-    <div class="row">
-        <div class="col-md-12">
-            <h5>Results for <%= query %></h5>
-        </div>
 
-        <!-- Aquabrowser-->
-        <div class="col-md-6">
-            <h4>Aquabrowser <% if (!data.results.aquabrowser.error) { %><small>(<%= data.results.aquabrowser.rowCount %> items)</small><% } %></h4>
+        <!-- Tabs -->
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#librarysearch" data-toggle="tab">Librarysearch <% if (!data.results.aquabrowser.error) { %><small>(<%= data.results.aquabrowser.rowCount %> items)</small><% } %></a></li>
+            <li><a href="#librarysearchplus" data-toggle="tab">Librarysearch+ <% if (!data.results.summon.error) { %><small>(<%= data.results.summon.rowCount %> items)</small><% } %></a></li>
+        </ul>
 
-            <% if (data.results.aquabrowser.error) { %>
-                <div class="alert alert-danger"><%= data.results.aquabrowser.error %></div>
-            <% } %>
+        <!-- Panels -->
+        <div class="tab-content">
 
-            <% if (data.results.aquabrowser.items) { %>
-                <% if (data.results.aquabrowser.items.length) { %>
-                <ul>
-                <% for(var i=0; i<data.results.aquabrowser.items.length; i++) {%>
-                    <li>
-                        <h5><a target="_blank" href="<%= data.results.aquabrowser.items[i].link %>" title="<%= data.results.aquabrowser.items[i].title %>"><%= data.results.aquabrowser.items[i].title %></a></h5>
-                        <span class="row">
-                            <span class="col-md-3">
-                                <% if (data.results.aquabrowser.items[i].thumbnail) { %>
-                                <a href="#" class="thumbnail">
-                                  <img src="<%= data.results.aquabrowser.items[i].thumbnail %>" alt="<%= data.results.aquabrowser.items[i].title %>">
-                                </a>
+            <!-- Librarysearch / Aquabrowser -->
+            <div class="tab-pane active" id="librarysearch">
+                <div class="row">
+
+                    <!-- Error -->
+                    <% if (data.results.aquabrowser.error) { %>
+                        <div class="col-md-12 col-error">
+                            <div class="alert alert-danger"><%= data.results.aquabrowser.error %></div>
+                        </div>
+                    <% } %>
+
+                    <!-- If results -->
+                    <% if (data.results.aquabrowser.items) { %>
+                        <% if (data.results.aquabrowser.items.length) { %>
+
+                            <!-- Filter -->
+                            <div class="col-md-3">
+                                <div class="row filters">
+                                    <div class="col-md-12">
+
+                                    <!-- Facets -->
+                                    <ul class="list-group filter-list">
+                                        <li class="list-group-item active">Filter by:</li>
+                                        <% if (data.results.aquabrowser.facets.length) { %>
+                                            <% for(var i=0; i<data.results.aquabrowser.facets.length; i++) {%>
+                                                <% if (i == 5) { %>
+                                                <span class="filter-toggle">
+                                                <% } %>
+                                                <li class="list-group-item"><span class="badge"><%= data.results.aquabrowser.facets[i].count %></span><a href="#"><%= data.results.aquabrowser.facets[i].value %></a></li>
+                                            <% } %>
+                                            </span>
+                                            <% if (data.results.aquabrowser.facets.length > 5) { %>
+                                                <li class="list-group-item"><a href="#" class="show-more" title="show more"><span class="glyphicon glyphicon-plus"></span> show more...</a></li>
+                                            <% } %>
+                                        <% } else {%>
+                                            <li class="list-group-item">No filters apply</li>
+                                        <% } %>
+                                    </ul>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Results -->
+                            <div class="col-md-9">
+
+                                <!-- Sort -->
+                                <div class="row result-sort">
+                                    <div class="col-md-6">
+                                        <p>Displaying <%= data.results.aquabrowser.items.length %> of <%= data.results.aquabrowser.rowCount %><p/>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="btn-group pull-right">
+                                          <div class="btn-group">
+                                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                              Relevancy
+                                              <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                              <li><a>Relevancy</a></li>
+                                            </ul>
+                                          </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <ul>
+                                <% for(var i=0; i<data.results.aquabrowser.items.length; i++) {%>
+                                    <li class="item">
+                                        <h5 class="item-title"><a target="_blank" href="<%= data.results.aquabrowser.items[i].link %>" title="<%= data.results.aquabrowser.items[i].title %>"><%= data.results.aquabrowser.items[i].title %></a></h5>
+                                        <span class="row">
+                                            <span class="col-md-2">
+                                                <span class="thumbnail">
+                                                <% if (data.results.aquabrowser.items[i].thumbnail) { %>
+                                                    <img src="<%= data.results.aquabrowser.items[i].thumbnail %>" alt="<%= data.results.aquabrowser.items[i].title %>">
+                                                <% } else { %>
+                                                    <span class="glyphicon glyphicon-remove-circle"></span>
+                                                <% } %>
+                                                </span>
+                                            </span>
+                                            <span class="col-md-10">
+                                                <p>Type: <a href="#"><%= data.results.aquabrowser.items[i].contentType %></a></p>
+                                                <p>Author: <a href="#"><%= data.results.aquabrowser.items[i].author %></a></p>
+                                                <p>Date: <a href="#"><%= data.results.aquabrowser.items[i].date %></a></p>
+                                            </span>
+                                        </span>
+                                        <hr/>
+                                    </li>
                                 <% } %>
-                            </span>
-                            <span class="col-md-9">[<%= data.results.aquabrowser.items[i].contentType %>]</span>
-                        </span>
-                        <hr/>
-                    </li>
-                <% } %>
-                </ul>
-                <% } else { %>
-                    <div class="alert alert-info">No results</div>
-                <% } %>
-            <% } %>
+                                </ul>
+
+                            </div>
+                        <% } else { %>
+                            <div class="col-md-12 col-error">
+                                <div class="alert alert-info">No results</div>
+                            </div>
+                        <% } %>
+                    <% } %>
+                </div>
+            </div>
+
+            <!-- Librarysearch+ / Summon -->
+            <div class="tab-pane" id="librarysearchplus">
+                <div class="row">
+
+                    <!-- Error -->
+                    <% if (data.results.summon.error) { %>
+                        <div class="col-md-12 col-error">
+                            <div class="alert alert-danger"><%= data.results.summon.error %></div>
+                        </div>
+                    <% } %>
+
+                    <!-- If results -->
+                    <% if (data.results.summon.items) { %>
+                        <% if (data.results.summon.items.length) { %>
+
+                        <!-- Filter -->
+                        <div class="col-md-3">
+                            <div class="row filters">
+                                <div class="col-md-12">
+                                    <!-- Facets -->
+                                    <% if (data.results.summon.facets.length) { %>
+                                    <ul class="list-group filter-list">
+                                        <li class="list-group-item active">Filter by:</li>
+                                        <% for(var i=0; i<data.results.summon.facets.length; i++) {%>
+                                            <% if (i == 5) { %>
+                                            <span class="filter-toggle">
+                                            <% } %>
+                                            <li class="list-group-item"><span class="badge"><%= data.results.summon.facets[i].count %></span><a href="#"><%= data.results.summon.facets[i].value %></a></li>
+                                        <% } %>
+                                        </span>
+                                        <% if (data.results.summon.facets.length > 5) { %>
+                                            <li class="list-group-item"><a href="#" class="show-more" title="show more"><span class="glyphicon glyphicon-plus"></span> show more...</a></li>
+                                        <% } %>
+                                    </ul>
+                                    <% } %>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Results -->
+                        <div class="col-md-9">
+
+                            <!-- Sort -->
+                            <div class="row result-sort">
+                                <div class="col-md-6">
+                                    <p>Displaying <%= data.results.summon.items.length %> of <%= data.results.summon.rowCount %><p/>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="btn-group pull-right">
+                                      <div class="btn-group">
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                          Relevancy
+                                          <span class="caret"></span>
+                                        </button>
+                                        <ul class="dropdown-menu">
+                                          <li><a>Relevancy</a></li>
+                                        </ul>
+                                      </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Results -->
+                            <ul>
+                            <% for(var i=0; i<data.results.summon.items.length; i++) {%>
+                                <li class="item">
+                                    <h5 class="item-title"><a target="_blank" href="<%= data.results.summon.items[i].link %>" title="<%= data.results.summon.items[i].title %>"><%= data.results.summon.items[i].title %></a></h5>
+                                    <span class="row">
+                                        <span class="col-md-2">
+                                            <span class="thumbnail">
+                                             <% if (data.results.summon.items[i].thumbnail) { %>
+                                                <img src="<%= data.results.summon.items[i].thumbnail %>" alt="<%= data.results.summon.items[i].title %>">
+                                            <% } else { %>
+                                                <span class="glyphicon glyphicon-remove-circle"></span>
+                                            <% } %>
+                                            </span>
+                                        </span>
+                                        <span class="col-md-10">
+                                            <p>Type: <a href="#"><%= data.results.summon.items[i].contentType %></a></p>
+                                            <p>Author: <a href="#"><%= data.results.summon.items[i].author %></a></p>
+                                            <p>Date: <a href="#"><%= data.results.summon.items[i].date %></a></p>
+                                        </span>
+                                    </span>
+                                    <hr/>
+                                </li>
+                            <% } %>
+                            </ul>
+                        </div>
+                        <% } else { %>
+                            <div class="col-md-12 col-error">
+                                <div class="alert alert-info">No results</div>
+                            </div>
+                        <% } %>
+                    <% } %>
+                </div>
+            </div>
         </div>
 
-        <!-- Summon -->
-        <div class="col-md-6">
-            <h4>Summon <% if (!data.results.summon.error) { %><small>(<%= data.results.summon.rowCount %> items)</small><% } %></h4>
-
-            <% if (data.results.summon.error) { %>
-                <div class="alert alert-danger"><%= data.results.summon.error %></div>
-            <% } %>
-
-            <% if (data.results.summon.items) { %>
-                <% if (data.results.summon.items.length) { %>
-                <ul>
-                <% for(var i=0; i<data.results.summon.items.length; i++) {%>
-                    <li>
-                        <h5><a target="_blank" href="<%= data.results.summon.items[i].link %>" title="<%= data.results.summon.items[i].title %>"><%= data.results.summon.items[i].title %></a></h5>
-                        <span class="row">
-                            <span class="col-md-3">
-                                <% if (data.results.summon.items[i].thumbnail) { %>
-                                <a href="#" class="thumbnail">
-                                  <img src="<%= data.results.summon.items[i].thumbnail %>" alt="<%= data.results.summon.items[i].title %>">
-                                </a>
-                                <% } %>
-                            </span>
-                            <span class="col-md-9">[<%= data.results.summon.items[i].contentType %>]</span>
-                        </span>
-                        <hr/>
-                    </li>
-                <% } %>
-                </ul>
-                <% } else { %>
-                    <div class="alert alert-info">No results</div>
-                <% } %>
-            <% } %>
-        </div>
-    </div>
-
+    <!-- Invalid query-->
     <% } else { %>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="alert alert-danger">Invalid query</div>
-        </div>
-    </div
+        <div class="row">
+            <div class="col-md-12">
+                <div class="alert alert-danger">Invalid query</div>
+            </div>
+        </div
     <% } %>
-</div>
-
-<div class="container">
-    <div class="col-md-1"><br/><br/></div>
 </div>
